--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +12,10 @@
 <body>
 <form action="naseri.php" method="post">
 
-    <input type="text" placeholder="titel" name="titel">
+    <input type="text" placeholder="title" name="title">
+    <br>
+
+    <input type="text" placeholder="map" name="map">
     <br>
     <textarea name="text"></textarea>
     <br>
