--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,7 +16,7 @@
     <textarea name="text"></textarea>
     <br>
     <select name="formt" >
-        <option value="pdf">pdt</option>
+        <option value="csv">csv</option>
         <option value="txt">text</option>
         <option value="json">json</option>
     </select>
